tests/NormalTests/paczka1/fuzzy1/37743913.err
Error in line 8: gigUI S682 56,6
Error in line 12: A118 S797 62,9
Error in line 29: MZf2im8vW A118 87,9
